# Mail

./: com.obyknovenius.Mail.json  meson.build
data/: com.obyknovenius.Mail.appdata.xml.in  com.obyknovenius.Mail.desktop.in  com.obyknovenius.Mail.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: mail-application.c  mail-application.h  mail-endpoint.c  mail-endpoint.h  mail-window.c  mail-window.h  mail-window.ui  mail.gresource.xml  main.c  meson.build  style.css
